UI edited new features addes

--- a/qt/4th.ui
+++ b/qt/4th.ui
@@ -18,6 +18,126 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="4">
+     <widget class="QWidget" name="main_meun" native="true">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);</string>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QWidget" name="header" native="true">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>100</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>100</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QWidget{
+background-color:rgb(0, 0, 0)
+}
+
+QPushButton{
+	color:white
+}
+
+QLabel{
+	color:white
+
+}
+
+QPushButton:checked
+{
+	background_color: #F5FAFE;
+	color: 1F95EF;
+}
+
+QLineEdit{
+	color:white;
+}</string>
+         </property>
+         <widget class="QPushButton" name="pushButton_7">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>30</y>
+            <width>131</width>
+            <height>41</height>
+           </rect>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>12</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>MENU</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>true</bool>
+          </property>
+          <property name="autoDefault">
+           <bool>true</bool>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="lineEdit">
+          <property name="geometry">
+           <rect>
+            <x>310</x>
+            <y>20</y>
+            <width>251</width>
+            <height>61</height>
+           </rect>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
+            <underline>false</underline>
+           </font>
+          </property>
+          <property name="text">
+           <string>EYE OF THE SAURON</string>
+          </property>
+          <property name="cursorMoveStyle">
+           <enum>Qt::VisualMoveStyle</enum>
+          </property>
+         </widget>
+        </widget>
+       </item>
+       <item>
+        <widget class="QWidget" name="widget" native="true">
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="0" column="1">
      <widget class="QWidget" name="icons_only" native="true">
       <property name="maximumSize">
@@ -86,7 +206,7 @@ QPushButton:checked
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
-           <normaloff>:/dashboard.png</normaloff>:/dashboard.png</iconset>
+           <normaloff>:/camera</normaloff>:/camera</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -147,7 +267,7 @@ QPushButton:checked
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
-           <normaloff>:/notifications.png</normaloff>:/notifications.png</iconset>
+           <normaloff>:/alert.png</normaloff>:/alert.png</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -176,12 +296,12 @@ QPushButton:checked
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
-           <normaloff>:/settings.png</normaloff>:/settings.png</iconset>
+           <normaloff>:/video.png</normaloff>:/video.png</iconset>
          </property>
          <property name="iconSize">
           <size>
-           <width>30</width>
-           <height>30</height>
+           <width>40</width>
+           <height>40</height>
           </size>
          </property>
          <property name="checkable">
@@ -218,105 +338,6 @@ QPushButton:checked
          </property>
          <property name="autoExclusive">
           <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="0" column="4">
-     <widget class="QWidget" name="main_meun" native="true">
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);</string>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <item>
-        <widget class="QWidget" name="header" native="true">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>100</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>100</height>
-          </size>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">QWidget{
-background-color:rgb(0, 0, 0)
-}
-
-QPushButton{
-	color:white
-}
-
-QLabel{
-	color:white
-
-}
-
-QPushButton:checked
-{
-	background_color: #F5FAFE;
-	color: 1F95EF;
-}
-
-QLineEdit{
-	color:white;
-}</string>
-         </property>
-         <widget class="QPushButton" name="pushButton_7">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>30</y>
-            <width>93</width>
-            <height>28</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>MENU</string>
-          </property>
-          <property name="checkable">
-           <bool>true</bool>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <property name="autoExclusive">
-           <bool>true</bool>
-          </property>
-          <property name="autoDefault">
-           <bool>true</bool>
-          </property>
-         </widget>
-         <widget class="QLineEdit" name="lineEdit">
-          <property name="geometry">
-           <rect>
-            <x>380</x>
-            <y>20</y>
-            <width>141</width>
-            <height>41</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>EYE OF THE SAURON</string>
-          </property>
-         </widget>
-        </widget>
-       </item>
-       <item>
-        <widget class="QWidget" name="widget" native="true">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
          </property>
         </widget>
        </item>
@@ -388,11 +409,11 @@ QPushButton:checked
           </size>
          </property>
          <property name="text">
-          <string>DASHBOARD</string>
+          <string>     LIVE</string>
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
-           <normaloff>:/dashboard.png</normaloff>:/dashboard.png</iconset>
+           <normaloff>:/camera</normaloff>:/camera</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -420,7 +441,7 @@ QPushButton:checked
           </size>
          </property>
          <property name="text">
-          <string>SEARCH</string>
+          <string>     TARGET</string>
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
@@ -449,11 +470,11 @@ QPushButton:checked
           </size>
          </property>
          <property name="text">
-          <string>NOTIFICATION</string>
+          <string>     ALERTS</string>
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
-           <normaloff>:/notifications.png</normaloff>:/notifications.png</iconset>
+           <normaloff>:/alert.png</normaloff>:/alert.png</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -478,16 +499,16 @@ QPushButton:checked
           </size>
          </property>
          <property name="text">
-          <string>SETTINGS</string>
+          <string>     VIDEO</string>
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
-           <normaloff>:/settings.png</normaloff>:/settings.png</iconset>
+           <normaloff>:/video.png</normaloff>:/video.png</iconset>
          </property>
          <property name="iconSize">
           <size>
-           <width>30</width>
-           <height>30</height>
+           <width>40</width>
+           <height>40</height>
           </size>
          </property>
          <property name="checkable">
@@ -507,7 +528,7 @@ QPushButton:checked
           </size>
          </property>
          <property name="text">
-          <string>SIGN OUT</string>
+          <string>     SIGN OUT</string>
          </property>
          <property name="icon">
           <iconset resource="resource.qrc">
@@ -582,22 +603,6 @@ QPushButton:checked
    </hints>
   </connection>
   <connection>
-   <sender>notification_1</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>notification_2</receiver>
-   <slot>setChecked(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>73</x>
-     <y>475</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>163</x>
-     <y>473</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>settings_1</sender>
    <signal>toggled(bool)</signal>
    <receiver>settings_2</receiver>
@@ -642,22 +647,6 @@ QPushButton:checked
     <hint type="destinationlabel">
      <x>57</x>
      <y>372</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>notification_2</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>notification_1</receiver>
-   <slot>setChecked(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>156</x>
-     <y>476</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>62</x>
-     <y>473</y>
     </hint>
    </hints>
   </connection>
@@ -770,6 +759,38 @@ QPushButton:checked
     <hint type="destinationlabel">
      <x>195</x>
      <y>813</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>notification_1</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>notification_2</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>73</x>
+     <y>475</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>163</x>
+     <y>473</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>notification_2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>notification_1</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>156</x>
+     <y>476</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>62</x>
+     <y>473</y>
     </hint>
    </hints>
   </connection>
